// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loads canonS2is.jpg 1`] = `
Object {
  "contentHash": "7d5bd5ffdad4b4c71e455631ebc137f189d50ed4",
  "metadata": Object {
    "cameraModel": "Canon PowerShot S2 IS",
    "createdAt": 1187049600000,
    "gps": undefined,
  },
  "relativePath": "canonS2is.jpg",
}
`;

exports[`loads iphone3gs.JPG 1`] = `
Object {
  "contentHash": "9bb08d3051b22a416aa8eded126a800e9f6d2dd7",
  "metadata": Object {
    "cameraModel": "iPhone 3GS",
    "createdAt": 1320451200000,
    "gps": Object {
      "altitude": 33.5587918,
      "latitude": -27.5788333333333,
      "longitude": -48.5223333333333,
    },
  },
  "relativePath": "iphone3gs.JPG",
}
`;

exports[`loads iphone5s.jpg 1`] = `
Object {
  "contentHash": "e2fe6fcbf4044046933845a233b1129bfd3ec4d8",
  "metadata": Object {
    "cameraModel": "iPhone 5s",
    "createdAt": 1391558400000,
    "gps": Object {
      "altitude": 61.07607608,
      "latitude": 48.8551166666667,
      "longitude": 2.36418888888889,
    },
  },
  "relativePath": "iphone5s.jpg",
}
`;

exports[`loads iphone6.jpg 1`] = `
Object {
  "contentHash": "e56e56185e42ac9569b4d811adb5cd495fbcebec",
  "metadata": Object {
    "cameraModel": "iPhone 6",
    "createdAt": 1533772800000,
    "gps": undefined,
  },
  "relativePath": "iphone6.jpg",
}
`;

exports[`loads nokia5.jpg 1`] = `
Object {
  "contentHash": "da1fb28e2764fcd4edc27c4c65167a1349c9b802",
  "metadata": Object {
    "cameraModel": "Nokia 5",
    "createdAt": 1541635200000,
    "gps": undefined,
  },
  "relativePath": "nokia5.jpg",
}
`;

exports[`loads nokia620.jpg 1`] = `
Object {
  "contentHash": "a4461089301c564665b392ba4190c6e19458966a",
  "metadata": Object {
    "cameraModel": "Lumia 620",
    "createdAt": 1365120000000,
    "gps": Object {
      "altitude": 0.007704160247,
      "latitude": -27.6007616666667,
      "longitude": -48.4811608333333,
    },
  },
  "relativePath": "nokia620.jpg",
}
`;

exports[`loads nokia5130.jpg 1`] = `
Object {
  "contentHash": "0a434b8b8aa7b45d9b15c809e98e2d4f8f7077ba",
  "metadata": Object {
    "cameraModel": "5130c-2",
    "createdAt": 1256169600000,
    "gps": undefined,
  },
  "relativePath": "nokia5130.jpg",
}
`;

exports[`loads nokia5200.jpg 1`] = `
Object {
  "contentHash": "4ea53a04af429bbc3b5e741f3214d7f05a98a177",
  "metadata": Object {
    "cameraModel": 5200,
    "createdAt": 1543708800000,
    "gps": undefined,
  },
  "relativePath": "nokia5200.jpg",
}
`;

exports[`loads sonyA6000.arw 1`] = `
Object {
  "contentHash": "98ce370e686f5a40a02523058679a06ca3ff4ce2",
  "metadata": Object {
    "cameraModel": "ILCE-6000",
    "createdAt": 1534204800000,
    "gps": undefined,
  },
  "relativePath": "sonyA6000.arw",
}
`;

exports[`loads sonyNex3.arw 1`] = `
Object {
  "contentHash": "c78d2b525bb9bfe21f036c21202dcae2fdde3fcb",
  "metadata": Object {
    "cameraModel": "NEX-3N",
    "createdAt": 1391558400000,
    "gps": undefined,
  },
  "relativePath": "sonyNex3.arw",
}
`;

exports[`loads sonyNex3.jpg 1`] = `
Object {
  "contentHash": "6c4e0614f36b68ddf1ef24b938691e48723f71dc",
  "metadata": Object {
    "cameraModel": "NEX-3N",
    "createdAt": 1391558400000,
    "gps": undefined,
  },
  "relativePath": "sonyNex3.jpg",
}
`;
